import java.util.List;

public class Discount {

    private double discount;
    List<User> userDiscount;

    public Discount(double discount){

        this.discount = discount;
    }

    public void setDiscount(){

        this.discount = discount;

    }

    public double getDiscount(){

        return discount;

    }

    /*public double addDiscountToOrder(){

    for(String discount : userDiscount){
        if(
        }
    }
        }
    */
    public String toString(){
        return toString();
    }

}
