public class Main {

    public static void main (String args[]){

        StartMenu startMenu = new StartMenu("mm", "hdhh", "dhdh");
        startMenu.CreateUser();



    }
}
