import java.util.List;

public class Order {

private List<Restaurant> orders;

public Order(List<Restaurant>orders){

}
public String placeOrders(){
    return placeOrders();
}

public String displayOrder(){
    return displayOrder();
}

public String deleteOrders(){
    return deleteOrders();
}

public String toString(){
    return toString();
}

}
