public class Payment {

private double payment;

public Payment(double payment){
    this.payment = payment;
}

public double calculatePayment(){
    return calculatePayment();
}

public String toString(){
    return toString();
}
}
