import java.util.Scanner;
import java.util.List;
import java.util.Scanner;

public class TextUI {
    

        private Scanner scanner;

        public String getInput(String msg){
            return msg;
        }

        public void displayMessage(String msg){

        }

//public int chooseRestaurant(List<Restaurant>){
        //  return chooseRestaurant();
//}

    }


